--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-
-
 services:
   app:
     build:
@@ -18,7 +16,7 @@ services:
       - 8000:80
     volumes:
       - ./:/var/www
-      - ./nginx:/etc/nginx/conf.d
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
   db:
     image: mysql:8.0
     container_name: app-db
